Add flyway dependency, add db migration, change to ddl validate, add logging

--- a/backend/entrypoint/src/main/resources/application-local.properties
+++ b/backend/entrypoint/src/main/resources/application-local.properties
@@ -2,8 +2,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./data/testdb
 spring.datasource.username=h2
 spring.datasource.password=password
-spring.sql.init.schema-locations=classpath:sql/schema.sql
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=validate
 
 springdoc.swagger-ui.path=/swagger
-
