--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -12,3 +12,14 @@ services:
       - POSTGRES_PASSWORD=password
     ports:
       - "5432:5432"
+  app:
+    build: .
+    restart: always
+    environment:
+      - DATASOURCE_URL=jdbc:postgresql://db:5432/redex
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=password
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
