--- a/backend/entrypoint/src/main/resources/application-container.properties
+++ b/backend/entrypoint/src/main/resources/application-container.properties
@@ -1,8 +1,7 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/redex
-spring.datasource.username=postgres
-spring.datasource.password=password
-#spring.sql.init.schema-locations=classpath:sql/schema.sql
-#spring.sql.init.mode=always
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=validate
 
 springdoc.swagger-ui.path=/swagger
