add unit tests for dao

--- a/backend/entrypoint/src/main/resources/application-container.properties
+++ b/backend/entrypoint/src/main/resources/application-container.properties
@@ -4,4 +4,4 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 
-springdoc.swagger-ui.path=/swagger
+springdoc.api-docs.enabled=false
