--- a/backend/entrypoint/src/main/resources/application-container.properties
+++ b/backend/entrypoint/src/main/resources/application-container.properties
@@ -1,7 +1,9 @@
+server.port=${PORT}
+
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/redex
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.jpa.hibernate.ddl-auto=validate
 
 springdoc.api-docs.enabled=false
