--- a/backend/entrypoint/src/main/resources/application-local.properties
+++ b/backend/entrypoint/src/main/resources/application-local.properties
@@ -1,3 +1,5 @@
+server.port=8080
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:file:./data/testdb
 spring.datasource.username=h2
