--- a/backend/entrypoint/src/test/resources/application.properties
+++ b/backend/entrypoint/src/test/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8080
 
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./data/redex
+spring.datasource.url=jdbc:h2:file:./testdata/redex;
 spring.datasource.username=h2
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=validate
 
-springdoc.swagger-ui.path=/swagger
+springdoc.api-docs.enabled=false
+
+spring.flyway.clean-disabled=false
